added cities I've lived in

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>html exercise</title>
   </head>
   <body>
-
+    <ul>
+      <li>Springville, Utah</li>
+      <li>Orem, Utah</li>
+      <li>Provo, Utah</li>
+      <li>Manhattan, Kansas</li>
+      <li>Iowa City, Iowa</li>
+      <li>Seattle, Washington</li>
+    </ul>
   </body>
 </html>
