added cities I'd like to visit

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <li>Iowa City, Iowa</li>
       <li>Seattle, Washington</li>
     </ul>
+    <ol>
+      <li>Vancouver, British Columbia</li>
+      <li>Portland, Oregon</li>
+      <li>City with Redwoods</li>
+    </ol>
   </body>
 </html>
