added titles to lists

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>html exercise</title>
   </head>
   <body>
+    <h3>Where I've lived</h3>
     <ul>
       <li>Springville, Utah</li>
       <li>Orem, Utah</li>
@@ -13,10 +14,12 @@
       <li>Iowa City, Iowa</li>
       <li>Seattle, Washington</li>
     </ul>
+    <h3>Where I'd like to visit</h3>
     <ol>
       <li>Vancouver, British Columbia</li>
       <li>Portland, Oregon</li>
       <li>City with Redwoods</li>
     </ol>
+
   </body>
 </html>
