added explanations for places where I lived

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <h3>Where I've lived</h3>
     <ul>
       <li>Springville, Utah</li>
+        <p>Childhood home</p>
       <li>Orem, Utah</li>
+        <p>University</p>
       <li>Provo, Utah</li>
+        <p>Poor life choices</p>
       <li>Manhattan, Kansas</li>
+        <p>Internship</p>
       <li>Iowa City, Iowa</li>
+        <p>Another internship</p>
       <li>Seattle, Washington</li>
+        <p>Grad school</p>
     </ul>
     <h3>Where I'd like to visit</h3>
     <ol>
