added style to the second list

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </ul>
     <h3>Where I'd like to visit</h3>
     <ol>
-      <li>Vancouver, British Columbia</li>
-      <li>Portland, Oregon</li>
-      <li>City with Redwoods</li>
+      <li><strong>Vancouver, British Columbia</strong></li>
+      <li><em>Portland, Oregon</em></li>
+      <li><strong>City with Redwoods<strong></li>
     </ol>
 
   </body>
