added image at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       <li><em>Portland, Oregon</em></li>
       <li><strong>City with Redwoods<strong></li>
     </ol>
-
+    <img src="http://i.telegraph.co.uk/multimedia/archive/03589/Wellcome_Image_Awa_3589699k.jpg" />
   </body>
 </html>
